--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
+    "nodemailer": "^6.9.16",
     "pino": "^9.5.0",
     "pino-http": "^10.3.0"
   }
