add last step to the project

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ SMTP_PASSWORD=
 SMTP_FROM=
 JWT_SECRET=
 APP_DOMAIN=
-API_KEY=
-API_SECRET=
-CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
 ENABLE_CLOUDINARY=
