--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "Galina Mykolaychuk <gflawiae@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@redocly/cli": "^1.26.1",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
     "nodemon": "^3.1.7",
@@ -33,6 +37,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16",
     "pino": "^9.5.0",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
