--- a/swagger/paths/contacts/{id}/delete.yaml
+++ b/swagger/paths/contacts/{id}/delete.yaml
@@ -17,5 +17,7 @@ parameters:
 responses:
   '204':
     description: 'No content'
+  '401':
+    $ref: '../../components/responses/401.yaml'
   '404':
     $ref: '../../../components/responses/404.yaml'
